Colour scale for chart Fixed overlapping axis labels

--- a/app/app.css
+++ b/app/app.css
@@ -30,6 +30,6 @@
 }
 
 /*TODO: scope and do more styling*/
-.bar{
-  fill: steelblue;
-}
+/*.bar{*/
+  /*fill: steelblue;*/
+/*}*/
